--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
     <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-target" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -69,7 +69,7 @@
           <a class="navbar-brand" href="/about">GovReady Q</a>
         </div>
 
-        <div class="collapse navbar-collapse">
+        <div id="navbar-collapse-target" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">My Projects</a></li>
           </ul>
