change color of invite dialog's invite button from red (danger!) to green (happiness)
fixes #88

--- a/templates/base.html
+++ b/templates/base.html
@@ -173,7 +173,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Nevermind</button>
-        <button type="button" class="btn btn-danger btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
+        <button type="button" class="btn btn-success btn-submit" onclick="$('#invitation_modal form').submit()">Invite</button>
       </div>
     </div>
   </div>
