make the continue button on task completion more prominent since it is now at the bottom of the page

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -87,14 +87,20 @@
     {% if supermodule and supermodule.task.editor == request.user %}
       {% if supermodule.task == supermodule.project.root_task %}
         {# return to project #}
-        <p class="text-success">Continue with <a href="{{task.project.get_absolute_url}}#tab={{supermodule.question.spec.tab|slugify}}/{{supermodule.question.spec.group|slugify}}/{{supermodule.question.key|slugify}}/{{task.id}}">other modules in {{task.project.title}}</a>.</p>
+        <p><a href="{{task.project.get_absolute_url}}#tab={{supermodule.question.spec.tab|slugify}}/{{supermodule.question.spec.group|slugify}}/{{supermodule.question.key|slugify}}/{{task.id}}" class="btn btn-success">
+          Continue with other modules in {{task.project.title}} &raquo;
+        </a></p>
       {% else %}
         {# return to non-project parent task #}
-        <p><a href="{{supermodule.task.get_absolute_url}}" class="btn btn-primary">Continue Answering {{supermodule.task.title}} &raquo;</a></p>
+        <p><a href="{{supermodule.task.get_absolute_url}}" class="btn btn-success">
+          Continue Answering {{supermodule.task.title}} &raquo;
+        </a></p>
       {% endif %}
     {% else %}
       {# every task, except projects, are now subtasks of other tasks, so this only occurs if a task is a subtask to multiple super-tasks #}
-      <p class="text-success">This module is complete. Continue with <a href="{{task.project.get_absolute_url}}">other modules in {{task.project.title}}</a>.</p>
+      <p><a href="{{task.project.get_absolute_url}}" class="btn btn-success">
+        Continue with other modules in {{task.project.title}} &raquo;
+      </a></p>
     {% endif %}
   {% endwith %}
 
