longtext's <textarea> element was not disabled when viewed by a non-editor

--- a/templates/question.html
+++ b/templates/question.html
@@ -307,7 +307,7 @@ $(function() {
     {% if write_priv %}
       $('#inputctrl').focus();
     {% else %}
-      form.find('input').prop('disabled', true);
+      form.find('input, textarea').prop('disabled', true);
     {% endif %}
 
     {% if discussion %}
