--- a/templates/question.html
+++ b/templates/question.html
@@ -214,6 +214,12 @@ Next Question: {{q.spec.title}}
 
             {% endif %}
 
+            {% if answer.answered_by_reference %}
+            <p class="text-info">
+              This question cannot be changed because it is linked to another question.
+            </p>
+            {% endif %}
+
             {% if write_priv %}
             <button id="save-button"
               type="submit" class="btn btn-success"
