add an external-function question type that lets us run Python code to provide the answer to a question

--- a/templates/question.html
+++ b/templates/question.html
@@ -209,6 +209,10 @@ Next Question: {{q.spec.title}}
               {# no other content but an empty value #}
               <input type="hidden" name="value" value=""/>
 
+            {% elif q.spec.type == "external-function" %}
+              {# no other content but an empty value #}
+              <input type="hidden" name="value" value=""/>
+
             {% else %}
                 {{q.spec.type}}
 
