Pull menu tabs right

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,6 @@
               width:267px;
               position: relative;
               top: -10px;
-              left: -30px;
             }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -77,7 +76,7 @@
           <a class="navbar-brand" href="/about"><img id="govreadyqlogo" alt="GovReady Q logo" src="/static/module-assets/govready-q_logo-tp-sm.png"></a>
         </div>
 
-        <div id="navbar-collapse-target" class="collapse navbar-collapse">
+        <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">My Projects</a></li>
           </ul>
