--- a/templates/base.html
+++ b/templates/base.html
@@ -42,10 +42,11 @@
                 font-family: 'Hind', sans-serif;
             }
 
-            img#govreadyqlogo {
-              width:267px;
-              position: relative;
-              top: -10px;
+            .navbar-brand {
+              padding: 1px;
+            }
+            .navbar-brand img {
+              width: 201px;
             }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -73,7 +74,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/about"><img id="govreadyqlogo" alt="GovReady Q logo" src="/static/module-assets/govready-q_logo-tp-sm.png"></a>
+          <a class="navbar-brand" href="/about"><img alt="GovReady Q logo" src="/static/module-assets/govready-q_logo-tp-sm.png"></a>
         </div>
 
         <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
