move some static assets into a better path

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/about"><img alt="GovReady Q logo" src="/static/module-assets/govready-q_logo-tp-sm.png"></a>
+          <a class="navbar-brand" href="/about"><img alt="GovReady Q logo" src="{% static "img/brand/navbar-logo.png" %}"></a>
         </div>
 
         <div id="navbar-collapse-target" class="collapse navbar-collapse pull-right">
