--- a/templates/project.html
+++ b/templates/project.html
@@ -83,9 +83,11 @@
 
 .task_finished {
   background-color: #dfd;
-  /*background-image: url('/static/module-assets/govready-check-small.png');
+  {% comment %}
+  /*background-image: url({% static "/img/icons/check-small.png" %});
   background-repeat: no-repeat;
   background-position: center;*/
+  {% endcomment %}
 }
 
 .task img {
