don't mark notifications as read until the user says so using a new Mark As Read link

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,13 +99,14 @@
             {% notifications_unread as unread_count %}
             {% if unread_count %}
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" onclick="mark_notifications_read({{request.user.notifications.unread.0.id}})"><span class="badge">{{ unread_count }}</span> <span class="caret">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="badge">{{ unread_count }}</span> <span class="caret">
               <ul class="dropdown-menu">
-                {% for n in request.user.notifications.unread %}
-                  <li><a href="{% if n.target %}{{n.target.get_absolute_url}}{% else %}javascript:false;{% endif %}">
+                {% for n in request.user.notifications.all|slice:":10" %}
+                  <li class="notification {% if n.unread %}unread{% endif %}"><a href="{% if n.target %}{{n.target.get_absolute_url}}{% else %}javascript:false;{% endif %}">
                     {{n}}
                   </a></li>
                 {% endfor %}
+              	<li><a href="#" onclick="$(this).parents('.dropdown').find('.badge').text('0'); return mark_notifications_read({{request.user.notifications.unread.0.id}})" style="font-style: italic; font-size: 90%;">Mark All Read</a></li>
               </ul>
             </li>
             {% endif %}
