--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,9 @@
             .navbar-brand img {
               width: 201px;
             }
+            .navbar .notification.unread a span {
+                font-weight: bold;
+            }
         </style>
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
         <link rel="stylesheet" href="{% static "vendor/fontawesome/css/font-awesome.min.css" %}">
@@ -97,19 +100,39 @@
             </li>
 
             {% notifications_unread as unread_count %}
-            {% if unread_count %}
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="badge">{{ unread_count }}</span> <span class="caret">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="badge">{{ unread_count }}</span> <span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li>
+                    <div style="display: block; padding: 3px 20px; clear: both; font-weight: 400; line-height: 1.42857143; white-space: nowrap;"> {# copied bootstrap's .dropdown-menu>li>a styles so we can have an drop-down entry that isn't a link #}
+                        <div style="font-size: 90%; text-align: right; color: #444;">
+                            {% if request.user.notifications.all.count > 0 %}
+                                <a href="/user/notifications">View All</a>
+                                {% if unread_count > 0 %}
+                                |
+                                <a href="#"
+                                   onclick="$(this).parents('.dropdown').find('.badge').text('0'); return mark_notifications_read({ upto_id: {{request.user.notifications.all.0.id}} })">Mark All Read</a>
+                                {% endif %}
+                            {% else %}
+                                No notifications.
+                            {% endif %}
+                        </div>
+                    </div>
+                </li>
+
                 {% for n in request.user.notifications.all|slice:":10" %}
-                  <li class="notification {% if n.unread %}unread{% endif %}"><a href="{% if n.target %}{{n.target.get_absolute_url}}{% else %}javascript:false;{% endif %}">
-                    {{n}}
-                  </a></li>
+                  <li class="notification {% if n.unread %}unread{% endif %}" data-notification-id="{{n.id}}">
+                    {# the link has an onclick handler that cancels the click, runs ajax to mark the notification as read, and then on the ajax callback redirects to the target url #}
+                    <a
+                        href="{% if n.target %}{{n.target.get_absolute_url}}{% else %}javascript:false;{% endif %}"
+                        onclick="return mark_notifications_read({ id: {{n.id}} }{% if n.target %}, function() { window.location = '{{n.target.get_absolute_url|escapejs}}'; }{% endif %})">
+                        <span>{{ n.actor }} {{ n.verb }} {% if n.target %}{{ n.target }}{% endif %}</span>
+                        {{ n.timesince }} ago
+                    </a>
+                  </li>
                 {% endfor %}
-              	<li><a href="#" onclick="$(this).parents('.dropdown').find('.badge').text('0'); return mark_notifications_read({{request.user.notifications.unread.0.id}})" style="font-style: italic; font-size: 90%;">Mark All Read</a></li>
               </ul>
             </li>
-            {% endif %}
 
             {% else %}
             <li><a href="{% url "account_login" %}">Log In</a></li>
