add discussion comment text as the description of notifications and show it on the new notifications page (but not in the drop-down because it would be too much info?)

--- a/templates/notifications/notice.html
+++ b/templates/notifications/notice.html
@@ -22,6 +22,11 @@
     {% endif %}
   </a>
 
+  {% if notice.description %}
+    <br>
+    {{notice.description}}
+  {% endif %}
+
   <br>
 
   <span style="font-size: 85%">{{ notice.timesince }} ago</span>
