--- a/templates/base.html
+++ b/templates/base.html
@@ -37,9 +37,11 @@
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
-                font-size: 16px;
                 overflow-y: scroll;
                 font-family: 'Hind', sans-serif;
+            }
+            body, blockquote {
+                font-size: 16px;
             }
 
             .navbar-brand {
