--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -6,9 +6,14 @@
 
 {% block body %}
 <style>
-.output-document {
-  background-color: #FBF6F4;
-  color: black;
+table.table {
+  border: 1px solid #0369a3;
+}
+.table>tbody>tr>td {
+  border-top: 1px solid #0369a3;
+}
+thead {
+  background-color: #dbe5f1;
 }
 </style>
 
