--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<style>
+<style> {# repeated in ssp/project.yaml #}
 table.table {
   border: 1px solid #0369a3;
 }
